# irilab2026

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
data_cards/: plantdoc_full_README.md  plantdoc_tiny_README.md  plantvillage_full_README.md  plantvillage_tiny_README.md
example/: shortcut_toy.ipynb  shortcut_toy_annotated.ipynb  shortcut_toy_annotated_v2.ipynb  shortcut_toy_v2.ipynb
example/Geirhos_Toy/: shortcut_toy.ipynb
example/Grad_CAM/: grad_cam.ipynb  grad_cam_BAC.ipynb
irilab2026/: __init__.py  data.py  environment.py  evaluation.py  training.py  vision.py
irilab2026/resources/: README.md  precommit.json
notebooks/: README.md
notebooks/r1/: README.md  r1_orientation.ipynb
notebooks/r1/r1-q1/: 01_deg_analysis.ipynb  02_core_overlap.ipynb  03_consensus_compare.ipynb  README.md
notebooks/r1/r1-q2/: 00_question_orientation.ipynb  00b_matrix_quality_check.ipynb  01_wgcna.ipynb  02_hub_identification.ipynb  03_comparison.ipynb  README.md
notebooks/r1/r1-q3/: 00_orient_and_precommit.ipynb  01_classifier.ipynb  02_shap.ipynb  03_batch_confound.ipynb  03_compare_and_interpret.ipynb  README.md
notebooks/r1/r1-q4/: 01_integration.ipynb  (+4 more)
notebooks/r2/: README.md  r2_orientation.ipynb  r2q2-reference-masks.ipynb
notebooks/tutorials/: google_colab_tutorial.ipynb  introduction_to_python.ipynb
scripts/: atgenexpress_metadata_pull.py  build_orientation_tarball.py  build_pd_full_hf.py  build_pv_full_hf.py  build_pv_full_tarball.py  load_plantvillage_orientation.py
tests/: test_atgenexpress_metadata.py  test_evaluation.py  test_loaders.py  test_probe_to_agi.py  test_seed.py  test_smoke.py  test_training.py  test_vision.py
(+23 files in other folders)
